syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resourcespb";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/commonpb/common.proto";

package dev.multy.resources;

message ImageReference {
  enum OperatingSystemDistribution {
    UNKNOWN = 0;
    UBUNTU = 1;
    DEBIAN = 2;
    CENT_OS = 3;
  }

  OperatingSystemDistribution os = 1;
  string version = 2;
}

message CreateVirtualMachineRequest {
  VirtualMachineArgs resource = 1;
}

message ReadVirtualMachineRequest {
  string resource_id = 1;
}

message UpdateVirtualMachineRequest {
  string resource_id = 1;
  VirtualMachineArgs resource = 2;
}

message DeleteVirtualMachineRequest {
  string resource_id = 1;
}

message VirtualMachineAwsOverride {
  string instance_type = 1;
}

message VirtualMachineAzureOverride {
  string size = 1;
}

message VirtualMachineGcpOverride {
  string project = 1;
  string machine_type = 2;
}

message VirtualMachineArgs {
  common.ResourceCommonArgs common_parameters = 1;
  string name = 2;
  repeated string network_interface_ids = 4;
  repeated string network_security_group_ids = 5;
  common.VmSize.Enum vm_size = 6;
  string user_data_base64 = 7;
  string subnet_id = 8;
  string public_ssh_key = 9;
  string public_ip_id = 10;
  bool generate_public_ip = 11;
  ImageReference image_reference = 12;
  VirtualMachineAwsOverride aws_override = 13;
  VirtualMachineAzureOverride azure_override = 14;
  VirtualMachineGcpOverride gcp_override = 15;
  int32 availability_zone = 16;
}

message VirtualMachineResource {
  common.CommonResourceParameters common_parameters = 1;
  string name = 2;
  repeated string network_interface_ids = 4;
  repeated string network_security_group_ids = 5;
  common.VmSize.Enum vm_size = 6;
  string user_data_base64 = 7;
  string subnet_id = 8;
  string public_ssh_key = 9;
  string public_ip_id = 10;
  bool generate_public_ip = 11;
  ImageReference image_reference = 14;
  VirtualMachineAwsOverride aws_override = 15;
  VirtualMachineAzureOverride azure_override = 16;
  VirtualMachineGcpOverride gcp_override = 17;
  int32 availability_zone = 18;

  // outputs
  string public_ip = 12;
  string identity_id = 13;
}
